--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "@fontsource/fira-mono": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
-    "cookie": "^0.4.1"
+    "@urql/svelte": "^1.3.1",
+    "cookie": "^0.4.1",
+    "graphql": "^15.6.1"
   }
 }
